--- a/public/app.html
+++ b/public/app.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Exo+2:700|Marmelad|PT+Sans:700|Roboto+Condensed:700|Rubik:500|Ubuntu:500&amp;subset=cyrillic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/words-mines/style.css?"/>
+    <link rel="stylesheet" href="/words-mines/style.css?%startTime%"/>
 </head>
 <body class="dark-theme">
 <div id="root"></div>
